// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`App component > Render home page 1`] = `
<div>
  <div
    class="_app_812fc8"
  >
    <header
      class="_header_812fc8"
    >
      <div
        class="_title_812fc8"
      >
        <div
          class="_layoutContainer_812fc8"
        >
          <div
            class="_storeName_812fc8"
          >
            <img
              alt="vinyl record with tonearm and stylus on it"
              class="_logo_812fc8"
              src="/waxdisc-logo.png"
            />
            <h1>
              WAXDISC
            </h1>
          </div>
          <a
            class="_cart_812fc8"
            data-discover="true"
            href="/crate"
          >
            <span
              class="_cartCount_812fc8"
            />
            <img
              alt="crate outline icon"
              src="/src/assets/crate-outline.png"
            />
            <span>
              Crate
            </span>
          </a>
        </div>
      </div>
      <nav
        class="_navbar_812fc8"
      >
        <ul>
          <li>
            <a
              data-discover="true"
              href="/"
            >
              Home
            </a>
          </li>
          <li>
            <a
              data-discover="true"
              href="/shop/new-releases"
            >
              Shop
            </a>
          </li>
          <li>
            <a
              data-discover="true"
              href="/about"
            >
              About
            </a>
          </li>
          <li>
            <a
              data-discover="true"
              href="/crate"
            >
              Crate
            </a>
          </li>
        </ul>
      </nav>
    </header>
    <main
      class="_content_812fc8"
    >
      <div
        class="_layoutContainer_812fc8"
      >
        <div
          class="_home_621afd"
        >
          <div
            class="_heroCarousel_869c5f"
          >
            <button
              class="_previous_869c5f"
            >
              <img
                alt="previous chevron"
                src="data:image/svg+xml,%3csvg%20xmlns='http://www.w3.org/2000/svg'%20viewBox='0%200%2024%2024'%3e%3cpath%20d='M15.41,16.58L10.83,12L15.41,7.41L14,6L8,12L14,18L15.41,16.58Z'%20fill='rgba(255,%20255,%20255,%200.8)'/%3e%3c/svg%3e"
              />
            </button>
            <div
              class="_slides_869c5f"
              style="transform: translateX(-0%);"
            >
              <a
                class="_heroImage_869c5f"
                data-discover="true"
                href="/shop/new-releases"
              >
                <img
                  alt="Interior of a vinyl store with people browsing in soft focus"
                  src="/src/assets/store-interior-1.jpg"
                />
              </a>
              <a
                class="_heroImage_869c5f"
                data-discover="true"
                href="/product/4osUXHB3fDXwyrtRKvBE2m"
              >
                <img
                  alt="MM..FOOD - MF DOOM vinyl"
                  src="/src/assets/doom-vinyl.jpg"
                />
              </a>
              <a
                class="_heroImage_869c5f"
                data-discover="true"
                href="/product/4osUXHB3fDXwyrtRKvBE2m"
              >
                <img
                  alt="MM..FOOD - MF DOOM vinyl opened up"
                  src="/src/assets/doom-vinyl-open.jpg"
                />
              </a>
              <a
                class="_heroImage_869c5f"
                data-discover="true"
                href="/about"
              >
                <img
                  alt="Interior of a vinyl store with people browsing the collection"
                  src="/src/assets/store-interior-2.jpg"
                />
              </a>
            </div>
            <div
              class="_indicators_869c5f"
            >
              <div
                class="_indicator_869c5f _selected_869c5f"
              />
              <div
                class="_indicator_869c5f "
              />
              <div
                class="_indicator_869c5f "
              />
              <div
                class="_indicator_869c5f "
              />
            </div>
            <button
              class="_next_869c5f"
            >
              <img
                alt="next chevron"
                src="data:image/svg+xml,%3csvg%20xmlns='http://www.w3.org/2000/svg'%20viewBox='0%200%2024%2024'%3e%3cpath%20d='M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z'%20fill='rgba(255,%20255,%20255,%200.8)'/%3e%3c/svg%3e"
              />
            </button>
          </div>
          <p>
            Loading...
          </p>
        </div>
      </div>
    </main>
    <footer
      class="_footer_088786"
    >
      <div
        class="_layoutContainer_088786"
      >
        <div>
          <h2>
            WAXDISC
          </h2>
          <p>
            Home to Australia's best vinyl collection
          </p>
        </div>
        <ul>
          <h4>
            Help
          </h4>
          <li>
            <a
              data-discover="true"
              href="/orders"
            >
              Track my order
            </a>
          </li>
          <li>
            <a
              data-discover="true"
              href="/returns"
            >
              Returns
            </a>
          </li>
          <li>
            <a
              data-discover="true"
              href="/contact"
            >
              Contact us
            </a>
          </li>
          <li>
            <a
              data-discover="true"
              href="/terms"
            >
              Terms and conditions
            </a>
          </li>
        </ul>
        <ul>
          <h4>
            Company
          </h4>
          <li>
            <a
              data-discover="true"
              href="/about"
            >
              About us
            </a>
          </li>
          <li>
            <a
              data-discover="true"
              href="/store-location"
            >
              Store location
            </a>
          </li>
          <li>
            <a
              data-discover="true"
              href="/careers"
            >
              Careers
            </a>
          </li>
          <li>
            <a
              data-discover="true"
              href="/news"
            >
              News
            </a>
          </li>
          <li>
            <a
              data-discover="true"
              href="/feedback"
            >
              Feedback
            </a>
          </li>
        </ul>
      </div>
    </footer>
  </div>
</div>
`;

exports[`App component > Visit crate page 1`] = `
<div>
  <div
    class="_app_812fc8"
  >
    <header
      class="_header_812fc8"
    >
      <div
        class="_title_812fc8"
      >
        <div
          class="_layoutContainer_812fc8"
        >
          <div
            class="_storeName_812fc8"
          >
            <img
              alt="vinyl record with tonearm and stylus on it"
              class="_logo_812fc8"
              src="/waxdisc-logo.png"
            />
            <h1>
              WAXDISC
            </h1>
          </div>
          <a
            class="_cart_812fc8"
            data-discover="true"
            href="/crate"
          >
            <span
              class="_cartCount_812fc8"
            />
            <img
              alt="crate outline icon"
              src="/src/assets/crate-outline.png"
            />
            <span>
              Crate
            </span>
          </a>
        </div>
      </div>
      <nav
        class="_navbar_812fc8"
      >
        <ul>
          <li>
            <a
              data-discover="true"
              href="/"
            >
              Home
            </a>
          </li>
          <li>
            <a
              data-discover="true"
              href="/shop/new-releases"
            >
              Shop
            </a>
          </li>
          <li>
            <a
              data-discover="true"
              href="/about"
            >
              About
            </a>
          </li>
          <li>
            <a
              data-discover="true"
              href="/crate"
            >
              Crate
            </a>
          </li>
        </ul>
      </nav>
    </header>
    <main
      class="_content_812fc8"
    >
      <div
        class="_layoutContainer_812fc8"
      >
        <div
          class="_cartContainer_7e8544"
        >
          <div
            class="_title_7e8544"
          >
            <img
              alt="crate outline icon"
              class="_crateIcon_7e8544"
              src="/src/assets/crate-outline.png"
            />
            <h2>
              Your Crate
            </h2>
          </div>
          <p>
            Your crate is empty
          </p>
        </div>
      </div>
    </main>
    <footer
      class="_footer_088786"
    >
      <div
        class="_layoutContainer_088786"
      >
        <div>
          <h2>
            WAXDISC
          </h2>
          <p>
            Home to Australia's best vinyl collection
          </p>
        </div>
        <ul>
          <h4>
            Help
          </h4>
          <li>
            <a
              data-discover="true"
              href="/orders"
            >
              Track my order
            </a>
          </li>
          <li>
            <a
              data-discover="true"
              href="/returns"
            >
              Returns
            </a>
          </li>
          <li>
            <a
              data-discover="true"
              href="/contact"
            >
              Contact us
            </a>
          </li>
          <li>
            <a
              data-discover="true"
              href="/terms"
            >
              Terms and conditions
            </a>
          </li>
        </ul>
        <ul>
          <h4>
            Company
          </h4>
          <li>
            <a
              data-discover="true"
              href="/about"
            >
              About us
            </a>
          </li>
          <li>
            <a
              data-discover="true"
              href="/store-location"
            >
              Store location
            </a>
          </li>
          <li>
            <a
              data-discover="true"
              href="/careers"
            >
              Careers
            </a>
          </li>
          <li>
            <a
              data-discover="true"
              href="/news"
            >
              News
            </a>
          </li>
          <li>
            <a
              data-discover="true"
              href="/feedback"
            >
              Feedback
            </a>
          </li>
        </ul>
      </div>
    </footer>
  </div>
</div>
`;

exports[`App component > Visit home page 1`] = `
<div>
  <div
    class="_app_812fc8"
  >
    <header
      class="_header_812fc8"
    >
      <div
        class="_title_812fc8"
      >
        <div
          class="_layoutContainer_812fc8"
        >
          <div
            class="_storeName_812fc8"
          >
            <img
              alt="vinyl record with tonearm and stylus on it"
              class="_logo_812fc8"
              src="/waxdisc-logo.png"
            />
            <h1>
              WAXDISC
            </h1>
          </div>
          <a
            class="_cart_812fc8"
            data-discover="true"
            href="/crate"
          >
            <span
              class="_cartCount_812fc8"
            />
            <img
              alt="crate outline icon"
              src="/src/assets/crate-outline.png"
            />
            <span>
              Crate
            </span>
          </a>
        </div>
      </div>
      <nav
        class="_navbar_812fc8"
      >
        <ul>
          <li>
            <a
              data-discover="true"
              href="/"
            >
              Home
            </a>
          </li>
          <li>
            <a
              data-discover="true"
              href="/shop/new-releases"
            >
              Shop
            </a>
          </li>
          <li>
            <a
              data-discover="true"
              href="/about"
            >
              About
            </a>
          </li>
          <li>
            <a
              data-discover="true"
              href="/crate"
            >
              Crate
            </a>
          </li>
        </ul>
      </nav>
    </header>
    <main
      class="_content_812fc8"
    >
      <div
        class="_layoutContainer_812fc8"
      >
        <div
          class="_home_621afd"
        >
          <div
            class="_heroCarousel_869c5f"
          >
            <button
              class="_previous_869c5f"
            >
              <img
                alt="previous chevron"
                src="data:image/svg+xml,%3csvg%20xmlns='http://www.w3.org/2000/svg'%20viewBox='0%200%2024%2024'%3e%3cpath%20d='M15.41,16.58L10.83,12L15.41,7.41L14,6L8,12L14,18L15.41,16.58Z'%20fill='rgba(255,%20255,%20255,%200.8)'/%3e%3c/svg%3e"
              />
            </button>
            <div
              class="_slides_869c5f"
              style="transform: translateX(-0%);"
            >
              <a
                class="_heroImage_869c5f"
                data-discover="true"
                href="/shop/new-releases"
              >
                <img
                  alt="Interior of a vinyl store with people browsing in soft focus"
                  src="/src/assets/store-interior-1.jpg"
                />
              </a>
              <a
                class="_heroImage_869c5f"
                data-discover="true"
                href="/product/4osUXHB3fDXwyrtRKvBE2m"
              >
                <img
                  alt="MM..FOOD - MF DOOM vinyl"
                  src="/src/assets/doom-vinyl.jpg"
                />
              </a>
              <a
                class="_heroImage_869c5f"
                data-discover="true"
                href="/product/4osUXHB3fDXwyrtRKvBE2m"
              >
                <img
                  alt="MM..FOOD - MF DOOM vinyl opened up"
                  src="/src/assets/doom-vinyl-open.jpg"
                />
              </a>
              <a
                class="_heroImage_869c5f"
                data-discover="true"
                href="/about"
              >
                <img
                  alt="Interior of a vinyl store with people browsing the collection"
                  src="/src/assets/store-interior-2.jpg"
                />
              </a>
            </div>
            <div
              class="_indicators_869c5f"
            >
              <div
                class="_indicator_869c5f _selected_869c5f"
              />
              <div
                class="_indicator_869c5f "
              />
              <div
                class="_indicator_869c5f "
              />
              <div
                class="_indicator_869c5f "
              />
            </div>
            <button
              class="_next_869c5f"
            >
              <img
                alt="next chevron"
                src="data:image/svg+xml,%3csvg%20xmlns='http://www.w3.org/2000/svg'%20viewBox='0%200%2024%2024'%3e%3cpath%20d='M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z'%20fill='rgba(255,%20255,%20255,%200.8)'/%3e%3c/svg%3e"
              />
            </button>
          </div>
          <p>
            Loading...
          </p>
        </div>
      </div>
    </main>
    <footer
      class="_footer_088786"
    >
      <div
        class="_layoutContainer_088786"
      >
        <div>
          <h2>
            WAXDISC
          </h2>
          <p>
            Home to Australia's best vinyl collection
          </p>
        </div>
        <ul>
          <h4>
            Help
          </h4>
          <li>
            <a
              data-discover="true"
              href="/orders"
            >
              Track my order
            </a>
          </li>
          <li>
            <a
              data-discover="true"
              href="/returns"
            >
              Returns
            </a>
          </li>
          <li>
            <a
              data-discover="true"
              href="/contact"
            >
              Contact us
            </a>
          </li>
          <li>
            <a
              data-discover="true"
              href="/terms"
            >
              Terms and conditions
            </a>
          </li>
        </ul>
        <ul>
          <h4>
            Company
          </h4>
          <li>
            <a
              data-discover="true"
              href="/about"
            >
              About us
            </a>
          </li>
          <li>
            <a
              data-discover="true"
              href="/store-location"
            >
              Store location
            </a>
          </li>
          <li>
            <a
              data-discover="true"
              href="/careers"
            >
              Careers
            </a>
          </li>
          <li>
            <a
              data-discover="true"
              href="/news"
            >
              News
            </a>
          </li>
          <li>
            <a
              data-discover="true"
              href="/feedback"
            >
              Feedback
            </a>
          </li>
        </ul>
      </div>
    </footer>
  </div>
</div>
`;

exports[`App component > Visit non-existent page 1`] = `
<div>
  <div
    class="_container_ffe12d"
  >
    <p>
      I think you might be lost 🧐
    </p>
    <a
      class="_homeLink_ffe12d"
      data-discover="true"
      href="/"
    >
      <img
        alt="WAXDISC logo"
        src="/waxdisc-logo.png"
      />
      Return Home
    </a>
  </div>
</div>
`;

exports[`App component > Visit shop page 1`] = `
<div>
  <div
    class="_app_812fc8"
  >
    <header
      class="_header_812fc8"
    >
      <div
        class="_title_812fc8"
      >
        <div
          class="_layoutContainer_812fc8"
        >
          <div
            class="_storeName_812fc8"
          >
            <img
              alt="vinyl record with tonearm and stylus on it"
              class="_logo_812fc8"
              src="/waxdisc-logo.png"
            />
            <h1>
              WAXDISC
            </h1>
          </div>
          <a
            class="_cart_812fc8"
            data-discover="true"
            href="/crate"
          >
            <span
              class="_cartCount_812fc8"
            />
            <img
              alt="crate outline icon"
              src="/src/assets/crate-outline.png"
            />
            <span>
              Crate
            </span>
          </a>
        </div>
      </div>
      <nav
        class="_navbar_812fc8"
      >
        <ul>
          <li>
            <a
              data-discover="true"
              href="/"
            >
              Home
            </a>
          </li>
          <li>
            <a
              data-discover="true"
              href="/shop/new-releases"
            >
              Shop
            </a>
          </li>
          <li>
            <a
              data-discover="true"
              href="/about"
            >
              About
            </a>
          </li>
          <li>
            <a
              data-discover="true"
              href="/crate"
            >
              Crate
            </a>
          </li>
        </ul>
      </nav>
    </header>
    <main
      class="_content_812fc8"
    >
      <div
        class="_layoutContainer_812fc8"
      >
        <p>
          Loading...
        </p>
      </div>
    </main>
    <footer
      class="_footer_088786"
    >
      <div
        class="_layoutContainer_088786"
      >
        <div>
          <h2>
            WAXDISC
          </h2>
          <p>
            Home to Australia's best vinyl collection
          </p>
        </div>
        <ul>
          <h4>
            Help
          </h4>
          <li>
            <a
              data-discover="true"
              href="/orders"
            >
              Track my order
            </a>
          </li>
          <li>
            <a
              data-discover="true"
              href="/returns"
            >
              Returns
            </a>
          </li>
          <li>
            <a
              data-discover="true"
              href="/contact"
            >
              Contact us
            </a>
          </li>
          <li>
            <a
              data-discover="true"
              href="/terms"
            >
              Terms and conditions
            </a>
          </li>
        </ul>
        <ul>
          <h4>
            Company
          </h4>
          <li>
            <a
              data-discover="true"
              href="/about"
            >
              About us
            </a>
          </li>
          <li>
            <a
              data-discover="true"
              href="/store-location"
            >
              Store location
            </a>
          </li>
          <li>
            <a
              data-discover="true"
              href="/careers"
            >
              Careers
            </a>
          </li>
          <li>
            <a
              data-discover="true"
              href="/news"
            >
              News
            </a>
          </li>
          <li>
            <a
              data-discover="true"
              href="/feedback"
            >
              Feedback
            </a>
          </li>
        </ul>
      </div>
    </footer>
  </div>
</div>
`;
